# StoryCore-Engine

./: .coverage  .env.example  .gitignore  .roomodes  AI_GENERATION_PARSING_FIX.md  ALL_ERRORS_FIXED.md  AMELIORATION_ASSISTANCE_IA.md  ANALYSE_PROBLEME_LLM.md  ANALYSE_PROBLEME_WIZARDS_LLM.md  ANY_TYPE_MIGRATION_REPORT.md  APPLICATION_DEMARREE_SUCCES.txt  ARCHITECTURE_DASHBOARD.md  ARCHIVE_MANIFEST.md  AUDIO_MIXING_ENGINE_REVIEW.md  AUDIT_FINAL_OLLAMA.txt  AUDIT_LLM_COMPLET.md  AUTO_DETECTION_MODELES_OLLAMA.md  BACKEND_IMPROVEMENTS.md  BACKEND_UI_INTEGRATION_PLAN.md  BOUTONS_IA_CORRECTION.md  BUNDLE_OPTIMIZATION.md  CHANGELOG.md  CHATBOX_READY_TO_USE.md  CHATBOX_TYPESCRIPT_FIXES_COMPLETE.md  CHATTERBOX_INTEGRATION_COMPLETE.md  CINEMATIC_METHODOLOGY.md  CLEANUP_PLAN.md  CODE_OF_CONDUCT.md  COMFYUI_30_SECONDS.md  COMFYUI_ALL_FILES_CREATED.md  COMFYUI_DESKTOP_DOCUMENTATION_UPDATE.md  COMFYUI_DOCS_COMPLETE_FINAL.md  COMFYUI_DOCS_FINAL_SUMMARY.md  COMFYUI_DOCS_TLDR.md  COMFYUI_DOCUMENTATION_COMPLETE.md  COMFYUI_DOCUMENTATION_SUCCESS.md  COMFYUI_INSTALLATION_WIZARD_PROGRESS.md  COMFYUI_PORT_8000_UPDATE.md  COMFYUI_SET  COMFYUI_SETTINGS_CLARIFICATION.md  (+361 more)
.checkpoints/: checkpoint_20260211_214054.json  checkpoint_20260211_214142.json  checkpoint_20260211_214209.json  checkpoint_20260211_214253.json
.github/: copilot-instructions.md
Commandes/: COMMANDES_RAPIDES_QWEN3VL.txt  COMMANDES_REDEMARRAGE_APPLICATION.txt  COMMANDES_TEST_PARSING_LLM.txt  COMMANDES_TEST_WIZARDS.txt
Guide/: GUIDE_RESET_RAPIDE.txt
Resume/: RESUME_VISUEL_FINAL.txt
backend/: .gitignore  PAYLOAD_SIZE_VALIDATION_COMPLETE.md  QUICKSTART.md  RATE_LIMITER_VERIFICATION_REPORT.md  README.md  TASK_13.1_COMPLETION.md  TASK_13.2_COMPLETION.md  TASK_14.1_COMPLETION.md  TASK_14_COMPLETION_SUMMARY.md  TASK_15.1_COMPLETION.md  TASK_16.1_COMPLETION.md  TASK_20.2_COMPLETION.md  VALIDATION_REPORT.md  __init__.py  audio_api.py  audio_mix_service.py  audio_sequence_integration.py  auth.py  automation_endpoints.py  camera_angle_api.py  camera_angle_service.py  camera_angle_types.py  character_ai_service.py  cine_production_api.py  cine_production_service.py  config.py  database_models.py  feedback_proxy.py  ffmpeg_service.py  github_api.py  gpu_service.py  lip_sync_api.py  lipsync_api.py  llm_api.py  llm_streaming.py  llm_usage_tracker.py  location_api.py  location_logic_loop_api.py  main_api.py  music_profile_builder.py  (+46 more)
blender_bridge/: README.md  __init__.py  backend_integration.py  camera_system.py  cli.py  demo_blender_bridge.py  headless_runner.py  location_manager.py  rig_generator.py  safety_guard.py  scene_types.py  script_generator.py  story_assets_connector.py  voice_bridge.py
blender_projection/: __init__.py  asset_library.py  asset_placer.py  reference_renderer.py  scene_builder.py
characters/: 21a19980-9baf-4389-b7d7-817cd6f044b2.json  72f8fc7e-501c-4a55-8ea8-f2868761e41e.json  d74d519e-5d37-4210-aa50-b49840b1b196.json
cli/: README.md  tsconfig.json
compare-demo/: dashboard.html  project.json  storyboard.json  video_plan.json
complete_pipeline_test/: character_data.json  project.json  scene_breakdown.json  video_timeline_metadata.json
config/: CREDENTIALS_README.md  blender_config.json  comfyui_config.json  credentials.json.example  electron-builder.json  llm_rate_limits.yaml  package-lock.json  package.json  production_config.yaml  project_config.json  tsconfig.json  tsconfig.test.json
coverage/: clover.xml  coverage-final.json  lcov.info
creative-studio-ui/: .gitignore  .prettierignore  ACCESSIBILITY_IMPLEMENTATION.md  ACCES_CONFIGURATION_COMFYUI.md  ADDITIONAL_FIXES_APPLIED.md  AI_ASSISTANCE_ENHANCEMENT.md  ALL_IMPORT_ERRORS_FIXED.md  ALL_TYPESCRIPT_ERRORS_FIXED.md  ANALYSE_ET_PLAN_IMPLEMENTATION.md  ANNOTATION_SYSTEM_IMPLEMENTATION.md  ASSET_LIBRARY_INTEGRATION.md  ASSET_PANEL_SELECTION_IMPROVEMENT.md  ASSET_SERVICE_IMPLEMENTATION.md  AUDIO_EFFECT_PRESETS_FEATURE.md  AUTOMATED_CLEANUP_GUIDE.md  AUTO_GENERATION_SEQUENCES_SHOTS.md  BOUTON_PROJECT_SETUP_CONNECTE.md  BROWSER_FILE_PICKER_IMPLEMENTATION.md  BUG_FIX_SEQUENCE_LOADING.md  BUILDER_IO_GUIDE.md  (+260 more)
docs/: INDEX.md  (+41 more)
(+4829 files in other folders)
